src/test/deca/etapeA/invalid/lexer/lexer_circular_include.deca
// Description:
//    test du parser pour les identificateurs
//    vérifie qu'aucun identificateur ne commence par un nombre
//
// Resultats:
// inclusion circulaire
// Ligne <11> : <Circular include for fichier.java>

#include "fichier.java"
#include "fichier.java"
